exports[`<Login /> react-redux should map dispatch to props 1`] = `
Object {
  "loginSubmit": [Function],
}
`

exports[`<Login /> react-redux should map state to props 1`] = `
Object {
  "isLoading": true,
}
`

exports[`<Login /> should render <Button /> 1`] = `1`

exports[`<Login /> should render <LoginForm /> 1`] = `1`

exports[`<Login /> should render <Wrapper /> 1`] = `1`
